# aroca-wrapper

./: .gitignore  README.md  _olf.toml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
config/: aroca_logger.py
src/aroca_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/atlassian_products/: rest_api.py
tests/: test_aroca_logger.py  test_gh_actions_pass.py
