[tool.poetry]
name = "aroca-wrapper"
version = "0.0.1"
description = "A python wrapper for the Atlassian REST API"
authors = ["arocasan <info@arocasan.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
urllib3 = "^2.1.0"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
